proc-macro-error/test-crate/tests/ui/result_expect.stderr
error: Result::expect_or_abort() test: error
 --> $DIR/result_expect.rs:4:10
  |
4 | make_fn!(result_expect);
  |          ^^^^^^^^^^^^^
